@@ -1,3 +1,9 @@
+2013-06-14  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module_logevent.h,
+	  modules/pandora_module_logevent.cc: Merged from 4.0 branch. Improved
+	  the reading of log event descriptions.
+
 2013-04-17  Ramon Novoa  <rnovoa@artica.es>
 
 	* windows/pandora_wmi.cc: Fixed a bug when concatenating multiple ip
